--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 telebot
 requests
-numpy==1.24.4
-tensorflow-cpu==2.15.0
-pillow==10.3.0
-gdown==5.1.0 
+numpy
+tensorflow
+pillow
+gdown
 Flask 
 python-dotenv
